# fewshot-finetune-domain-adaptation

./: .gitignore  embedding.py  filemoving.py  graph.py  graphs.py  main.py  print_image.py  pyproject.toml  reports.csv  script.ipynb  test.py  tests.py  tests_dann.py  tests_dann_tune.py  tests_dist.py  tests_fine.py  tests_pretrain.py  tests_triplet.py
common/: __init__.py  dataset.py  param.py  utils.py
core/: __init__.py  cosine_tune.py  dann.py  dann_tune.py  dist_tune.py  finetune.py  pretrain.py  triplet_tune.py
module/: __init__.py  cosine_triplet_loss.py  efficient_net.py  l2_loss.py  triplet_loss.py
